--- a/spain-2025-itinerary.qmd
+++ b/spain-2025-itinerary.qmd
@@ -41,11 +41,6 @@ format:
 The travel into Galicia was a bit of an adventure. My flight into Madrid was delayed, which made me miss my original train. I caught a later one, but even that got interrupted because wildfires had closed part of the tracks, so we all had to switch to a bus for the last stretch. By the time I finally made it to Sarria about 9:30 pm, I was ready to settle in. I checked into my hostel and had a pilgrim dinner with a new friend from Salamanca who arrived around the same time. The meal was classic Galician: caldo gallego, Estrella beer, and roasted pork. Galicia is famous for its rain, but so far the weather has been unexpectedly kind. I also got my pilgrim credential and my very first stamp—fittingly, at the restaurant where I ate dinner.  
 :::
 
-::: {layout-ncol=2}
-![](images/sep29-lounge.jpeg){fig-cap="ORD lounge fuel-up" alt="Plate of food with cava in airport lounge"}
-![](images/sep29-train.jpeg){fig-cap="Chamartín station" alt="Crowds boarding trains in Madrid"}
-:::
-
 ### Days 3–7 – Sept 30 to Oct 4 (Camino Francés – last 115 km)
 - **Day 3 (Sept 30):** Sarria → Portomarín (~22 km)  
   - Cross the Miño River into Portomarín, where the Church of San Nicolás was relocated stone by stone when the original town was flooded for the Belesar reservoir.
@@ -152,7 +147,7 @@ When I got to my hostel, I did the usual Camino routine: shower, laundry in the 
 - Walgreens blister pads (Compeed-style hydrocolloid)  
 - Ibuprofen / acetaminophen / citalopram / ambien
 - Hand sanitizer
-- tissue
+- Tissues
 - Earplugs + eye mask (for noisy albergues)  
 - Disposable contact lenses (a few as glasses backup)  
 
