--- a/spain-2025-itinerary.qmd
+++ b/spain-2025-itinerary.qmd
@@ -46,6 +46,18 @@ When I got to my hostel, I did the usual Camino routine: shower, laundry in the 
 - **Day 4 (Oct 1):** Portomarín → Palas de Rei (~25 km)  
   - Pass historic pilgrim hospices at Hospital de la Cruz and end in Palas de Rei, whose Church of San Tirso preserves remarkable medieval carvings.
   - Overnight: **Albergue San Marcos**
+
+::: {.callout-note}
+**Daily Summary — Oct 1**  
+Dinner in Portomarín last night was Galician pork on a small patio at sunset with Gabriel and Guillermo. They left earlier than I did this morning since they didn’t have reservations and needed to find open albergues. I was still up before 7:00 because the dorm room was noisy with snoring and people rustling to leave. I took a wrong turn heading out of Portomarín in the dark but corrected quickly and continued the climb out of town.  
+
+I stopped at a café for tortilla francesa with cheese (an omelet on bread), a café con leche, and fresh orange juice, which is excellent here. Later in the morning the fog lifted, and the day turned sunny with clear skies.  
+
+The Camino passed farms with cows, small villages of stone houses, and stretches of countryside with pine trees, rolling hills, and fields. At one crossroads I met Paul, an older man from Paris, who by coincidence I saw him again this afternoon staying at the same albergue in Palas de Rei.  
+
+When I arrived in Palas, I tried pulpo a la gallega (octopus), another Galician specialty. It was good, though not something I’ll seek out at home. At the albergue I showered, washed my clothes in the sink, and took a short nap. I’ll likely take a short walk around town this evening, but I’m sore from the day’s walk.  
+:::
+
 - **Day 5 (Oct 2):** Palas de Rei → Arzúa (~29 km)  
   - Often stop in Melide, famous for pulpo a la gallega (octopus) and the Romanesque church at Leboreiro.  
   - Arzúa is known for its cheese production and nearby Ribadiso hosts a medieval pilgrim hospital.
