--- a/spain-2025-itinerary.qmd
+++ b/spain-2025-itinerary.qmd
@@ -62,9 +62,35 @@ When I arrived in Palas, I tried pulpo a la gallega (octopus), another Galician 
   - Often stop in Melide, famous for pulpo a la gallega (octopus) and the Romanesque church at Leboreiro.  
   - Arzúa is known for its cheese production and nearby Ribadiso hosts a medieval pilgrim hospital.
   - Overnight: **Cruce de Caminos Arzúa**
+
+::: {.callout-note}
+**Daily Summary — Oct 2**  
+I set out in the morning with Carlos, who had stayed in my hostel. He is from San Miguel de Allende, Mexico. In the next village we stopped for breakfast of scrambled eggs with tomato, onion, and ham, which was excellent and kept me fueled for the walk. Carlos shared that he was walking the Camino because his partner of 19 years passed away from cancer in May. It was something his partner had wanted to do, and Carlos is walking in his memory while thinking about what comes next in life.  
+
+We walked together until Melide, where he stopped since he is dividing the Camino into shorter stages due to leg issues. Passing through Melide, I saw many restaurants serving pulpo in different forms—including one advertising pulpo pizza—but I didn’t stop since I had already tried pulpo the previous day and it wasn’t the right time for a meal. From there I continued with Pedro from Málaga for a while. His English was limited, so we spoke in Spanish, which was a challenge for me but good practice. Later I stopped at a café for fresh orange juice and some ibuprofen. My legs were sore since this was the longest stage.  
+
+I finished the day walking with Miriam from Ohio, who has been walking from France for the past 30 days. She shared that she is unsure about returning home because she is re-evaluating her marriage. Many pilgrims seem to be reflecting on big life changes—relationships, careers, and personal direction. The Camino passed through Ribadiso, where I crossed its medieval stone bridge and walked past the riverside albergue, one of the most scenic spots on this stretch.  
+
+In the evening I had dinner in an outdoor square with Guillermo, a Turkish American named Volkan I met in the hostel common area, and a group of people Guillermo knew from his hostel. Arzúa is known for its cheese, so we made sure to order a local cheese appetizer to start the meal.  
+:::
+
 - **Day 6 (Oct 3):** Arzúa → O Pedrouzo (~19 km)  
   - En route visit the chapel of Santa Irene and experience the atmosphere of anticipation in O Pedrouzo as pilgrims gather for the final day.
   - Overnight: **Albergue REM**
+
+::: {.callout-note}
+**Daily Summary — Oct 3**  
+This morning my muscles were stiff and sore, so I started slowly. Many walkers passed me, including Miriam from yesterday. After a few kilometers I stopped for breakfast and saw Guillermo and his friends again before they moved ahead. Fortunately, once my muscles warmed up I was able to walk more comfortably and keep a steady pace.  
+
+Much of the walk passed through eucalyptus groves, the tall trees giving shade and their distinct smell carrying on the breeze.  
+
+Later I ran into Volkan from yesterday, who was walking with Dee, an Irish woman he had met the day before. We then came across three older women walking together—two cousins from Canada whose husbands had passed away, and one from Australia who said her husband had “decided to be old” and didn’t come along. They had their packs sent ahead and were taking shorter stages, but they walked at a surprisingly fast pace.  
+
+I joined Volkan, Dee, and the three women for lunch before we parted ways since we were all staying in different villages that night. I had chorizo and Spanish tortilla, a classic egg and potato dish that is both simple and very tasty.  
+
+At the hostel that evening, I discovered Pedro from Málaga in the bed next to mine. Encounters like this are common on the Camino—people’s paths crossing again and again along the way.  
+:::
+
 - **Day 7 (Oct 4):** O Pedrouzo → Santiago (~20 km)  
   - Highlights include Lavacolla, the traditional cleansing site, Monte do Gozo offering panoramic views of Santiago, and attending the Pilgrim’s Mass featuring the Botafumeiro.
   - Collect Compostela certificate in Santiago.  
