--- a/spain-2025-itinerary.qmd
+++ b/spain-2025-itinerary.qmd
@@ -96,6 +96,21 @@ At the hostel that evening, I discovered Pedro from Málaga in the bed next to m
   - Collect Compostela certificate in Santiago.  
   - Overnight: **Pensión Rua Nova** (Rúa Nova, 4, Santiago de Compostela).  
   
+::: {.callout-note}
+**Daily Summary — Oct 4**  
+Rain fell steadily throughout the day, but it was my sore left ankle and right knee that slowed my pace. The group I’d been having dinner with started later and eventually overtook me, and we stopped together for a café con leche before parting ways. E
+
+I walked for a while with a German man who had started his Camino in France and later saw him again as I entered Santiago. I also came across a Danish woman I’d met a few days earlier who had also begun in France. For both of them, reaching Santiago was a major moment after weeks on the trail.  
+
+I stopped at a restaurant for caldo gallego, a warm Galician soup that was a welcome break from the rain. When I reached Monte do Gozo—the traditional first viewpoint of Santiago—the fog was thick enough that I couldn’t see the city below. The final stretch into Santiago wasn’t very scenic, following the highway for a while, but entering the old town was something special. Catching the first clear glimpse of the cathedral as I approached was still inspiring.  
+
+The main square was filled with pilgrims celebrating the end of their journeys—some, like me, having walked just five days, and others who had been on the road for more than a month.  
+
+I checked into a proper hotel at last. The room was small but felt like luxury after the albergues. After a much-needed nap to rest my legs, I explored the old town and cathedral in the evening light.  
+
+Dinner was at a tapas restaurant where I had the best scallops I’ve ever tasted, along with excellent Spanish wine. Later I joined Guillermo from Salamanca, two British men, and three women from the Basque Country for a tapas crawl that took us to several local bars. We stayed out late, in true Spanish fashion. In the early hours of the morning we parted ways. Even though we’d only known each other a few days, the hours walking, talking, and going out in the evenings made it feel like much longer.  
+:::
+
 ### Day 8 – Sun Oct 5
 - Full day in Santiago.  
 - Morning: Pilgrim’s Mass and/or cathedral museum/rooftop tour.  
@@ -104,15 +119,17 @@ At the hostel that evening, I discovered Pedro from Málaga in the bed next to m
 - Overnight: **Pensión Rua Nova** (Single room with private bathroom, free Wi-Fi, pedestrian old town location).  
 
 ### Day 9 – Mon Oct 6
-- **Decision point:** Reassess energy and weather on the evening of Oct 4 (after arrival in Santiago) to decide whether to overnight in Finisterre or remain in Santiago
-- Morning bus to Finisterre (~2.5 hrs).  
-- Explore the fishing port, beach, and town.  
-- Evening walk to Cabo Fisterra lighthouse for sunset at the “end of the world.”  
-- Overnight: **Finisterre (book in Santiago if weather/energy permit) OR third night in Santiago** — decision to be made after arrival.
+
+**Decision Point**
+- **Option A — Stay in Santiago (3rd night):**  
+  Take a true rest day. Sleep in, wander the old town, maybe revisit the cathedral or rooftop tour, and linger over long lunches or café breaks. Best choice if the weather looks rough or your ankle and knee are still grumpy from the Camino.  
+
+- **Option B — Day tour to Finisterre, Ézaro & Muxía:**  
+  Full-day guided excursion (around 9 a.m.–7 p.m.) from Santiago to the Galician coast. Visit the Finisterre Lighthouse, the dramatic Ézaro waterfall, and the seaside sanctuary at Muxía. Expect sweeping Atlantic views, small fishing villages, and a relaxed seafood lunch before returning to Santiago for a final evening of tapas and celebration.  
+
+Overnight: **Hotel Rúa Villar** (Santiago).
 
 ### Day 10 – Tue Oct 7
-- Morning in Finisterre — coffee in town or short coastal stroll.  
-- Midday bus back to Santiago (~2.5 hrs).  
 - 11:48 — Depart Santiago (AVE 04314, Confort, seat 4D, Booking Reference: KYC3XB).  
 - 14:50 — Arrive Madrid Chamartín.  
 - Evening tapas crawl in La Latina or Malasaña.  
@@ -146,9 +163,11 @@ At the hostel that evening, I discovered Pedro from Málaga in the bed next to m
 - Plastic bags + a couple lightweight packing cubes (organization, laundry separation)  
 
 ### Clothing
-- 2 Patagonia Capilene Cool Daily tees (short-sleeve, quick-dry)  
+- 2 Patagonia Capilene Cool Daily tees (short-sleeve, quick-dry)
+  - *Quick dry fabric was a must*  
 - Smartwool Merino 150 Quarter Zip (long-sleeve thermal, doubles as evening shirt)  
 - Patagonia R1 Air Pullover (light fleece mid-layer)  
+  - *Was the perfect fleece for this trip*
 - 1 lightweight rain jacket (waterproof, breathable)  
 - 1 REI Sahara Stretch Convertible Pants (trail use, doubles as shorts)  
 - 1 Prana Stretch Zion Pants (town/exploring Spain)  
@@ -158,8 +177,9 @@ At the hostel that evening, I discovered Pedro from Málaga in the bed next to m
 
 ### Footwear
 - Altra Lone Peak 9 Trail Running Shoes (primary walking shoes)  
+  - *These shoes were very comfortable and trail running shoes such as this are by far the most common Camino footwear. However, my ankles might have appreciated a bit more support from a light hiking shoe such as a Hoka Speedgoat*
 - Xero Shoes Z-Trail EV Sandals (evenings / backup)  
-
+  - *These are nice light sandals, but simple flip flops would have been sufficient*
 ### Toiletries
 - Toothbrush + small toothpaste  
 - Dr. Bronner’s Organic Liquid Soap – 2 oz (body + laundry)  
@@ -172,6 +192,7 @@ At the hostel that evening, I discovered Pedro from Málaga in the bed next to m
 
 ### Health & First Aid
 - Walgreens blister pads (Compeed-style hydrocolloid)  
+  - *A necessity ... I was able to share with a few others who did not bring*
 - Ibuprofen / acetaminophen / citalopram / ambien
 - Hand sanitizer
 - Tissues
@@ -183,20 +204,20 @@ At the hostel that evening, I discovered Pedro from Málaga in the bed next to m
 - EU Plug adapter 
 - AirPods
 - 13″ MacBook Air (with power bank/cord)  
+  - *There were times I'm glad I had this, but I'm not sure it was worth the weight; will reconsider for next time*
 
 ### Other
 - Sunglasses  
 - Hat
 - Clothesline for drying
+  - *I didn't end up using as albergues each had either a rail or line to use. But the weight was minimal and it could have come in handy*
 - Sleep sack / liner (for albergues)  
+  - *This was nice as albergue bedding sometimes was minimal*
 - Nite Ize gear tie 6" x 2
-- 2 × 1 L bottles (Smartwater style — bring 1 from home, buy 1 in Spain)  
+  *I didn't use, but weight was minimal and could have come in handy*
+- 2 × 1 L bottles (Smartwater style — bring 1 from home, buy 1 in Spain)
 - pen
-
----
-
-## Notes & Next Steps
-- Decide 2 vs. 3 nights in Santiago +/- daytrip to Finisterre or other vs. Overnight in Finisterre
+  - *more useful than I had thought, Pilgrim credencial requires some writing*
 
 ---
 
