--- a/spain-2025-itinerary.qmd
+++ b/spain-2025-itinerary.qmd
@@ -121,13 +121,14 @@ Dinner was at a tapas restaurant where I had the best scallops I’ve ever taste
 ### Day 9 – Mon Oct 6
 
 **Decision Point**
+
 - **Option A — Stay in Santiago (3rd night):**  
   Take a true rest day. Sleep in, wander the old town, maybe revisit the cathedral or rooftop tour, and linger over long lunches or café breaks. Best choice if the weather looks rough or your ankle and knee are still grumpy from the Camino.  
 
 - **Option B — Day tour to Finisterre, Ézaro & Muxía:**  
   Full-day guided excursion (around 9 a.m.–7 p.m.) from Santiago to the Galician coast. Visit the Finisterre Lighthouse, the dramatic Ézaro waterfall, and the seaside sanctuary at Muxía. Expect sweeping Atlantic views, small fishing villages, and a relaxed seafood lunch before returning to Santiago for a final evening of tapas and celebration.  
 
-Overnight: **Hotel Rúa Villar** (Santiago).
+- Overnight: **Hotel Rúa Villar** (Santiago).
 
 ### Day 10 – Tue Oct 7
 - 11:48 — Depart Santiago (AVE 04314, Confort, seat 4D, Booking Reference: KYC3XB).  
