--- a/spain-2025-itinerary.qmd
+++ b/spain-2025-itinerary.qmd
@@ -113,24 +113,51 @@ Dinner was at a tapas restaurant where I had the best scallops I’ve ever taste
 
 ### Day 8 – Sun Oct 5
 - Full day in Santiago.  
+- Overnight: **Pensión Rua Nova** (Single room with private bathroom, free Wi-Fi, pedestrian old town location).  
+
+### Day 8 – Sun Oct 5
+- Full day in Santiago.  
 - Morning: Pilgrim’s Mass and/or cathedral museum/rooftop tour.  
 - Afternoon: wander the old town, Alameda Park, and relax at a café.  
 - Evening tapas crawl on Rúa do Franco.  
-- Overnight: **Pensión Rua Nova** (Single room with private bathroom, free Wi-Fi, pedestrian old town location).  
+- Overnight: Pensión Rua Nova (Single room with private bathroom, free Wi-Fi, pedestrian old town location).  
+
+::: {.callout-note}
+Daily Summary — Oct 5  
+After staying out late the night before, I slept in and took things slowly. The day turned into a cycle of naps and small outings. I went to a laundromat to finally do a proper load of laundry—up to now everything had been washed in hostel sinks and dried on railings or lines. Having a full set of clean clothes again felt like a luxury.  
+
+While waiting for the laundry, I stopped at a nearby café for a café con leche, fresh-squeezed orange juice, and an excellent toast layered with tomato, avocado, and egg.  
+
+I decided to stay in Santiago for a third night and to visit Finisterre as a day trip instead of an overnight. I wasn’t sure I wanted to spend hours on a bus, but several Spanish pilgrims I’d shared drinks with the other night insisted it was worth it. The hotel also recommended a guided tour instead of public transport, which would save time and include more stops along the coast.  
+
+I met Carlos from San Miguel de Allende for lunch—he’d arrived a day later because he split the longest stage into two due to leg pain. We discovered we’ll be on the same train back to Madrid tomorrow and made plans to have breakfast together before departing.  
+
+In the afternoon, I wandered through the old town again, toured the cathedral, and picked up my Compostela certificate, the official proof of completing the Camino de Santiago.  
+
+Later I met up with Volkan, the Turkish American I’d walked with earlier in the week. He had never attended a Catholic Mass—or any Christian service—and was curious, so we went to the Pilgrim’s Mass inside the cathedral. It was crowded and standing-room-only, and eventually we slipped out a side door for tapas. Dee from Ireland stopped by briefly; both she and Volkan are heading out tomorrow—she on a direct flight to Ireland from Santiago airport and he by train to Italy before continuing on to visit his parents in Turkey.  
+:::
 
 ### Day 9 – Mon Oct 6
 
-**Decision Point**
+### Day 9 – Mon Oct 6
+- Finisterre, Ézaro & Muxía day tour (Toxo Travel)
+  - 08:50 check-in at Toxo Travel office, Rúa dos Bautizados 12 (tour departs 09:00)
+  - Booking ID T1381-251005-27 · paid €49 · +34 603 711 701 · info@toxotravel.gal
 
-- **Option A — Stay in Santiago (3rd night):**  
-  Take a true rest day. Sleep in, wander the old town, maybe revisit the cathedral or rooftop tour, and linger over long lunches or café breaks. Best choice if the weather looks rough or your ankle and knee are still grumpy from the Camino.  
+  - Planned stops
+    - Muros — fishing village with 15th-century historic quarter, arcades and galleries overlooking the estuary
+    - Ézaro waterfall — River Xallas drops ~40 m directly to the sea
+    - Fisterra Lighthouse & Km 0 — “end of the world” viewpoint over the Corcubión estuary
+    - Finisterre village — free time for old town, port, fish market, and lunch (Galician seafood)
+    - Muxía — Sanctuary of A Barca and the three “sacred stones” on a wild Atlantic point
+    - Ponte Maceira — cobbled hamlet with 14th-century Romanesque bridge and medieval mills
 
-- **Option B — Day tour to Finisterre, Ézaro & Muxía:**  
-  Full-day guided excursion (around 9 a.m.–7 p.m.) from Santiago to the Galician coast. Visit the Finisterre Lighthouse, the dramatic Ézaro waterfall, and the seaside sanctuary at Muxía. Expect sweeping Atlantic views, small fishing villages, and a relaxed seafood lunch before returning to Santiago for a final evening of tapas and celebration.  
+  - Return to Santiago by early evening for a relaxed final night in the old town
 
-- Overnight: **Hotel Rúa Villar** (Santiago).
+- Overnight: Hotel Rúa Villar (Santiago).
 
 ### Day 10 – Tue Oct 7
+- Breakfast with Carlos 
 - 11:48 — Depart Santiago (AVE 04314, Confort, seat 4D, Booking Reference: KYC3XB).  
 - 14:50 — Arrive Madrid Chamartín.  
 - Evening tapas crawl in La Latina or Malasaña.  
