--- a/spain-2025-itinerary.qmd
+++ b/spain-2025-itinerary.qmd
@@ -113,14 +113,7 @@ Dinner was at a tapas restaurant where I had the best scallops I’ve ever taste
 
 ### Day 8 – Sun Oct 5
 - Full day in Santiago.  
-- Overnight: **Pensión Rua Nova** (Single room with private bathroom, free Wi-Fi, pedestrian old town location).  
-
-### Day 8 – Sun Oct 5
-- Full day in Santiago.  
-- Morning: Pilgrim’s Mass and/or cathedral museum/rooftop tour.  
-- Afternoon: wander the old town, Alameda Park, and relax at a café.  
-- Evening tapas crawl on Rúa do Franco.  
-- Overnight: Pensión Rua Nova (Single room with private bathroom, free Wi-Fi, pedestrian old town location).  
+- Overnight: **Pensión Rua Nova** (Single room with private bathroom, free Wi-Fi, pedestrian old town location). 
 
 ::: {.callout-note}
 Daily Summary — Oct 5  
@@ -138,12 +131,7 @@ Later I met up with Volkan, the Turkish American I’d walked with earlier in th
 :::
 
 ### Day 9 – Mon Oct 6
-
-### Day 9 – Mon Oct 6
 - Finisterre, Ézaro & Muxía day tour (Toxo Travel)
-  - 08:50 check-in at Toxo Travel office, Rúa dos Bautizados 12 (tour departs 09:00)
-  - Booking ID T1381-251005-27 · paid €49 · +34 603 711 701 · info@toxotravel.gal
-
   - Planned stops
     - Muros — fishing village with 15th-century historic quarter, arcades and galleries overlooking the estuary
     - Ézaro waterfall — River Xallas drops ~40 m directly to the sea
@@ -152,9 +140,9 @@ Later I met up with Volkan, the Turkish American I’d walked with earlier in th
     - Muxía — Sanctuary of A Barca and the three “sacred stones” on a wild Atlantic point
     - Ponte Maceira — cobbled hamlet with 14th-century Romanesque bridge and medieval mills
 
-  - Return to Santiago by early evening for a relaxed final night in the old town
+- Return to Santiago by early evening for a relaxed final night in the old town
 
-- Overnight: Hotel Rúa Villar (Santiago).
+- Overnight: **Hotel Rúa Villar** (Santiago).
 
 ### Day 10 – Tue Oct 7
 - Breakfast with Carlos 
@@ -232,7 +220,7 @@ Later I met up with Volkan, the Turkish American I’d walked with earlier in th
 - EU Plug adapter 
 - AirPods
 - 13″ MacBook Air (with power bank/cord)  
-  - *There were times I'm glad I had this, but I'm not sure it was worth the weight; will reconsider for next time*
+  - *There were times I'm glad I had this, but it probably was not worth the weight; will reconsider for next time*
 
 ### Other
 - Sunglasses  
