--- a/spain-2025-itinerary.qmd
+++ b/spain-2025-itinerary.qmd
@@ -109,7 +109,7 @@ Dinner was at a tapas restaurant where I had the best scallops I’ve ever taste
 
 ### Day 8 – Sun Oct 5
 - Full day in Santiago.  
-- Overnight: **Pensión Rua Nova** (Single room with private bathroom, free Wi-Fi, pedestrian old town location). 
+- Overnight: **Pensión Rua Nova**
 
 ::: {.callout-note}
 Daily Summary — Oct 5  
@@ -127,36 +127,44 @@ Later I met up with Volkan, the Turkish American I’d walked with earlier in th
 :::
 
 ### Day 9 – Mon Oct 6
-- Finisterre, Ézaro & Muxía day tour (Toxo Travel)
-  - Planned stops
-    - Muros — fishing village with 15th-century historic quarter, arcades and galleries overlooking the estuary
-    - Ézaro waterfall — River Xallas drops ~40 m directly to the sea
-    - Fisterra Lighthouse & Km 0 — “end of the world” viewpoint over the Corcubión estuary
-    - Finisterre village — free time for old town, port, fish market, and lunch (Galician seafood)
-    - Muxía — Sanctuary of A Barca and the three “sacred stones” on a wild Atlantic point
-    - Ponte Maceira — cobbled hamlet with 14th-century Romanesque bridge and medieval mills
-
-- Return to Santiago by early evening for a relaxed final night in the old town
-
+- Finisterre tour
 - Overnight: **Hotel Rúa Villar** (Santiago).
 
+::: {.callout-note}
+**Daily Summary — Oct 6**  
+I booked a guided day tour to the coast. We visited Muros, Ézaro waterfall, the Fisterra lighthouse (“the end of the world”), the village of Finisterre, Muxía’s Sanctuary of A Barca, and Ponte Maceira with its 14th‑century Romanesque bridge. Muros was my favorite stop—a historic fishing village built up the hillside.  
+
+In Finisterre I had a pizza and a beer at an outdoor table overlooking the harbor. At Ézaro, the waterfall setting was beautiful, and it made me think a small boat tour out on the ría would be a great way to see this coast; something to consider for a future trip.  
+
+Back in Santiago I rested, then walked up to Parque da Alameda for sunset—first over the University of Santiago and then across to the cathedral from a distance. Dinner was on a street‑side table along my hotel’s cobblestone street: a Galician meat‑and‑cheese board with a glass of vino tinto.  
+:::
+
 ### Day 10 – Tue Oct 7
-- Breakfast with Carlos 
 - 11:48 — Depart Santiago (AVE 04314, Confort, seat 4D, Booking Reference: KYC3XB).  
 - 14:50 — Arrive Madrid Chamartín.  
 - Evening tapas crawl in La Latina or Malasaña.  
 - Overnight: **Petit Palace Plaza Mayor**  
+
+::: {.callout-note}
+**Daily Summary — Oct 7**  
+I met Carlos for breakfast at a café on the walk down to the station since we were on the same train. We took the AVE high‑speed rail back to Madrid. After checking into my hotel, I rested for a bit—my left ankle and right knee are still sore. By coincidence, friends from Grand Rapids who now live in Las Vegas were in Madrid the same night, so we met up and spent the evening sampling a few tapas spots, ending the night with churros y chocolate at Chocolatería San Ginés.
+:::
  
 ### Day 11 – Wed Oct 8
-- **08:30 am** — Arrive at Madrid Barajas T4 (recommended 3 hrs before departure, take Cercanías train from central Madrid).  
+- **08:30 am** — Arrive at Madrid Barajas T4 (recommended 3 hrs before departure) 
 - From Petit Palace Plaza Mayor:  
   - Walk ~5 min to Sol station.  
   - Take Cercanías C3 or C4 northbound to Chamartín (~10 min).  
-  - At Chamartín, transfer to Cercanías C1 or C10 directly to Barajas T4 (~15–20 min).  
-  - Total travel time ~40 min including transfer. Trains run every 15–20 min.  
-  - Alternative: Taxi/Uber directly to T4 (~25–35 min, €30–35 flat rate).
+  - At Chamartín, transfer to Cercanías C1
 - Madrid → Chicago ORD (Iberia IB 341, dep 11:35 am, arr 2:15 pm)  
 - Chicago → Muskegon (KG 5775, dep 6:00 pm, arr 7:50 pm)
+
+::: {.callout-note}
+Daily Summary — Oct 8  
+I walked to Sol Cercanías station and took the Cercanías to to the airport via a transfer at Chamartín. Getting through the airport was smooth, though I have heard at other times passport control can be backed up. I stopped by the lounge for yogurt and a cappuccino, then boarded and took a good nap on the plane.  
+
+I really enjoyed this trip and plan to do it again—possibly the Camino Portugués next time. I don’t see myself doing a full 30-day walk, but I could see adding a few more days beyond the “minimum” in the future.  
+:::
 
 ---
 
@@ -164,15 +172,18 @@ Later I met up with Volkan, the Turkish American I’d walked with earlier in th
 
 ### Documents & Money
 - Passport 
-- Flight & train tickets (digital copies on phone + 1 printed copy as backup)  
+- Flight & train tickets (digital copies on phone)
 - Credit + ATM cards
 - Euro cash
 - Priority Health card
 
 ### Pack Setup
-- REI Trail 40 backpack with built-in rain cover  
+- REI Trail 40 backpack with built-in rain cover
+  - *Pack worked well, a little larger than I needed.*
 - 1 small dry sack (for electronics/passport)  
-- Plastic bags + a couple lightweight packing cubes (organization, laundry separation)  
+- Plastic bags + a couple lightweight packing cubes (organization, laundry separation) 
+- Ultra-lightweight Eagle Creek packing cubes 
+  - *Nice to keep pack organized in hostels*
 
 ### Clothing
 - 2 Patagonia Capilene Cool Daily tees (short-sleeve, quick-dry)
@@ -188,24 +199,25 @@ Later I met up with Volkan, the Turkish American I’d walked with earlier in th
 - 3 pairs hiking socks (merino blend)  
 
 ### Footwear
-- Altra Lone Peak 9 Trail Running Shoes (primary walking shoes)  
+- Altra Lone Peak 9 Trail Running Shoes
   - *These shoes were very comfortable and trail running shoes such as this are by far the most common Camino footwear. However, my ankles might have appreciated a bit more support from a light hiking shoe such as a Hoka Speedgoat*
 - Xero Shoes Z-Trail EV Sandals (evenings / backup)  
-  - *These are nice light sandals, but simple flip flops would have been sufficient*
+  - *These are nice light sandals, but simple flip flops would have been sufficient for use around the hostel*
 ### Toiletries
 - Toothbrush + small toothpaste  
 - Dr. Bronner’s Organic Liquid Soap – 2 oz (body + laundry)  
 - Travel deodorant  
 - Razor + small shaving cream  
-- Quick-dry towel (microfiber)  
-- Sunscreen (50 ml to start; refill in Spain)  
+- Quick-dry towel (Pak Towel)  
+  - *The size I took was functional but a bit too small*
+- Sunscreen (50 ml to start; can buy more in Spain if needed)  
 - Lip balm with SPF  
-- Nail clippers  
 
 ### Health & First Aid
 - Walgreens blister pads (Compeed-style hydrocolloid)  
-  - *A necessity ... I was able to share with a few others who did not bring*
+  - *A necessity ... I was able to share with a few others who did not bring, had a small blister on my toe myself*
 - Ibuprofen / acetaminophen / citalopram / ambien
+  - *Had just the right amount of ibuprofen, but could have brought more*
 - Hand sanitizer
 - Tissues
 - Earplugs + eye mask (for noisy albergues)  
@@ -216,7 +228,7 @@ Later I met up with Volkan, the Turkish American I’d walked with earlier in th
 - EU Plug adapter 
 - AirPods
 - 13″ MacBook Air (with power bank/cord)  
-  - *There were times I'm glad I had this, but it probably was not worth the weight; will reconsider for next time*
+  - *There were times I'm glad I had this, but for next time will not bring as it was not worth the weight*
 
 ### Other
 - Sunglasses  
@@ -229,7 +241,7 @@ Later I met up with Volkan, the Turkish American I’d walked with earlier in th
   *I didn't use, but weight was minimal and could have come in handy*
 - 2 × 1 L bottles (Smartwater style — bring 1 from home, buy 1 in Spain)
 - pen
-  - *more useful than I had thought, Pilgrim credencial requires some writing*
+  - *more useful than I had thought, Pilgrim credencial requires some writing, customs form on flight back to U.S.*
 
 ---
 
